--- a/ntigttanyathanwy.html
+++ b/ntigttanyathanwy.html
@@ -111,7 +111,7 @@
   </div>
 
   <div class="container">
-    <h2>الحضور خاص بـ <strong>مستر فيصل</strong></h2>
+    <h2>النتيجة خاص بـ <strong>مستر فيصل</strong></h2>
     <form id="attendanceForm">
       <input type="text" id="studentId" placeholder="🔑 أدخل كود الطالب" required>
       <input type="submit" value="📊 عرض النتيجه">
@@ -151,7 +151,7 @@
         if (data.found) {
           resultDiv.innerHTML = `
             <div class="result-card">
-              <h3>📋 حضور الطالب</h3>
+              <h3>📋 نتيجه الطالب</h3>
               <p><strong>👦 اسم الطالب:</strong> ${data.name}</p>
               <p><strong>🧭 السنتر:</strong> ${data.geo}</p>
               <p><strong>📅امتحان الحصه الاولي:</strong> ${data.week1}</p>
