--- a/الصفحه-الرئيسية/index.html
+++ b/الصفحه-الرئيسية/index.html
@@ -201,7 +201,7 @@
 
       document.body.classList.add('fade-out');
       setTimeout(() => {
-        window.location.href = "start.html";
+        window.location.href = "https://www.mrfaisal.net/start.html";
       }, 500); // بعد نصف ثانية من السلاسة
     }
 
