--- a/start.html
+++ b/start.html
@@ -201,7 +201,7 @@
       <a href="contact.html" class="button-link">الامتحانات 📝</a>
       <a href="track.html" class="button-link">اشتري من عندنا 🛒</a>
       <a href="contact.html" class="button-link">اسألنا سؤال 📞</a>
-      <a href="admin.html" class="button-link">الشكاوي 📣</a>
+      <a href="shakwy.html" class="button-link">الشكاوي 📣</a>
     </div>
   </div>
 </body>
